# sdl_2d_game

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/game/: Game.h  GameState.h
include/player/: Direction.h  InputHandler.h  Player.h
include/sprite/: AssetLoader.h  sprite.h
src/: main.cpp
src/game/: Game.cpp
src/player/: InputHandler.cpp  Player.cpp
src/sprite/: AssetLoader.cpp  sprite.cpp
